--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,21 +1,28 @@
-name: Go
-on: [push, pull_request]
+name: Modularise CI
+
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+
 jobs:
   build:
-    name: Build
+    name: Test & build
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14
-      id: go
+      - name: Set up Go 1.14
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.14
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
-    - name: Test
-      run: make test
+      - name: Test
+        run: make test
 
-    - name: Build
-      run: make build
+      - name: Build
+        run: make build
